--- a/Day 19/Day 19.ipynb
+++ b/Day 19/Day 19.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "# ADVENT OF CODE\n",
     "# https://adventofcode.com/2020/day/19\n",
-    "\n",
     "# PREPARE DATA\n",
+    "\n",
     "import re\n",
     "\n",
     "with open('input.sql', 'r') as f:\n",
@@ -23,16 +23,10 @@
     "        result = re.sub(r\"(\\d+)\", lambda x: '({})'.format(rules[x.group()]) if '|' in rules[x.group()] else rules[x.group()], rule)\n",
     "        return parseRule(result)\n",
     "    else:\n",
-    "        clean = rule.replace('\"','').replace(' ','')\n",
-    "        return clean \n",
+    "        return rule.replace('\"','').replace(' ','') \n",
     "    \n",
     "def findMatchedText(pattern, texts):    \n",
-    "    matches = []\n",
-    "    for text in texts:\n",
-    "        if x := re.match(pattern, text):\n",
-    "            matches.append((text, x))\n",
-    "\n",
-    "    return len(matches)"
+    "    return len([text for text in texts if re.match(pattern, text)])"
    ]
   },
   {
@@ -46,18 +40,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "171"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "findMatchedText(('^' +parseRule(rules[\"0\"])  + '$'),text_to_check)"
    ]
@@ -88,14 +71,11 @@
     }
    ],
    "source": [
-    "# 8 11\n",
-    "# 42* 42 31\n",
-    "# 42* 42* 31*\n",
+    "#  0 > 8 11 > 42* 42 * 31 > 42* 42* 31*\n",
     "# 42 Repetition > 31 Repetition\n",
-    "\n",
     "# will be infinite, but i only try until 10 until value is not changed\n",
+    "\n",
     "found = 0\n",
-    "total = 0\n",
     "for i in range(2, 10):\n",
     "    CustomRules1 = '(' + parseRule(rules[\"42\"]) + ')' + '{'+ str(i) +'}'\n",
     "    for j in range(1, i):        \n",
@@ -105,6 +85,13 @@
     "            \n",
     "found"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
