--- a/Day 19/Day 19.ipynb
+++ b/Day 19/Day 19.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -65,7 +65,7 @@
        "369"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
     "    CustomRules1 = '(' + parseRule(rules[\"42\"]) + ')' + '{'+ str(i) +'}'\n",
     "    for j in range(1, i):        \n",
     "        CustomRules2 = '(' + parseRule(rules[\"31\"]) + ')' + '{'+ str(i-j) +'}'\n",
-    "        CustomRulesCombined = '(?:'+ CustomRules1 + CustomRules2  +')$'\n",
+    "        CustomRulesCombined = '^('+ CustomRules1 + CustomRules2  +')$'\n",
     "        found += findMatchedText(CustomRulesCombined,text_to_check)\n",
     "            \n",
     "found"
