--- a/Day 19/Day 19.ipynb
+++ b/Day 19/Day 19.ipynb
@@ -40,9 +40,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 18 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "171"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "findMatchedText(('^' +parseRule(rules[\"0\"])  + '$'),text_to_check)"
+    "%time findMatchedText(('^' +parseRule(rules[\"0\"])  + '$'),text_to_check)"
    ]
   },
   {
@@ -60,6 +78,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 42.1 ms\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "369"
@@ -71,19 +96,22 @@
     }
    ],
    "source": [
-    "#  0 > 8 11 > 42* 42 * 31 > 42* 42* 31*\n",
+    "# 0 > 8 11 > 42* 42 * 31 > 42* 42* 31*\n",
     "# 42 Repetition > 31 Repetition\n",
-    "# will be infinite, but i only try until 10 until value is not changed\n",
+    "# will be infinite, but i only try until 7 until value is not changed\n",
     "\n",
-    "found = 0\n",
-    "for i in range(2, 10):\n",
-    "    CustomRules1 = '(' + parseRule(rules[\"42\"]) + ')' + '{'+ str(i) +'}'\n",
-    "    for j in range(1, i):        \n",
-    "        CustomRules2 = '(' + parseRule(rules[\"31\"]) + ')' + '{'+ str(i-j) +'}'\n",
-    "        CustomRulesCombined = '^('+ CustomRules1 + CustomRules2  +')$'\n",
-    "        found += findMatchedText(CustomRulesCombined,text_to_check)\n",
-    "            \n",
-    "found"
+    "def countRepetitiveMessage():\n",
+    "    found = 0\n",
+    "    for i in range(2, 7):\n",
+    "        CustomRules1 = '(' + parseRule(rules[\"42\"]) + ')' + '{'+ str(i) +'}'\n",
+    "        for j in range(1, i):        \n",
+    "            CustomRules2 = '(' + parseRule(rules[\"31\"]) + ')' + '{'+ str(i-j) +'}'\n",
+    "            CustomRulesCombined = '^('+ CustomRules1 + CustomRules2  +')$'\n",
+    "            found += findMatchedText(CustomRulesCombined,text_to_check)\n",
+    "\n",
+    "    return found\n",
+    "\n",
+    "%time countRepetitiveMessage()"
    ]
   },
   {
