--- a/Day 19/Day 19.ipynb
+++ b/Day 19/Day 19.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "with open('input.sql', 'r') as f:\n",
     "    inputfile = f.read()    \n",
-    "    [rules, text_to_check] = inputfile.split('\\n\\n')\n",
+    "    [rules, monkeyMessages] = inputfile.split('\\n\\n')\n",
     "    rules = dict([tuple(rule.split(': ')) for rule in rules.split('\\n')])\n",
-    "    text_to_check = text_to_check.split('\\n')\n",
+    "    monkeyMessages = monkeyMessages.split('\\n')\n",
     "    \n",
     "def parseRule(rule):    \n",
     "    if re.search(r\"\\d+\", rule):\n",
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "%time findMatchedText(('^' +parseRule(rules[\"0\"])  + '$'),text_to_check)"
+    "%time findMatchedText(('^' +parseRule(rules[\"0\"])  + '$'),monkeyMessages)"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -81,7 +81,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 42.1 ms\n"
+      "Wall time: 64 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "369"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0 > 8 11 > 42* 42 * 31 > 42* 42* 31*\n",
+    "# 42 Repetition > 31 Repetition\n",
+    "# will be infinite, but i only try until 7 until value is not changed\n",
+    "\n",
+    "def countRepetitiveMessage(messages):\n",
+    "    found = 0\n",
+    "    rule42regex = parseRule(rules[\"42\"])\n",
+    "    rule31regex = parseRule(rules[\"31\"])    \n",
+    "    for i in range(2, 7):\n",
+    "        CustomRules1 = \"({}){{{}}}\".format(rule42regex, i)\n",
+    "        CustomRules2 = \"({}){{1,{}}}\".format(rule31regex, (i - 1))        \n",
+    "        CustomRulesCombined = '^{}{}$'.format(CustomRules1,CustomRules2)\n",
+    "        found += findMatchedText(CustomRulesCombined,messages)\n",
+    "    return found\n",
+    "\n",
+    "%time countRepetitiveMessage(monkeyMessages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### One Liner Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 17 ms\n"
      ]
     },
     {
@@ -96,22 +145,11 @@
     }
    ],
    "source": [
-    "# 0 > 8 11 > 42* 42 * 31 > 42* 42* 31*\n",
-    "# 42 Repetition > 31 Repetition\n",
-    "# will be infinite, but i only try until 7 until value is not changed\n",
+    "def countRepetitiveMessage2(messages,r31rx, r42rx, maxrepetition):\n",
+    "    result = [findMatchedText(\"^({}){{{}}}({}){{1,{}}}$\".format(r42rx, i, r31rx, i - 1),messages) for i in range(2, maxrepetition)]\n",
+    "    return sum(result)\n",
     "\n",
-    "def countRepetitiveMessage():\n",
-    "    found = 0\n",
-    "    for i in range(2, 7):\n",
-    "        CustomRules1 = '(' + parseRule(rules[\"42\"]) + ')' + '{'+ str(i) +'}'\n",
-    "        for j in range(1, i):        \n",
-    "            CustomRules2 = '(' + parseRule(rules[\"31\"]) + ')' + '{'+ str(i-j) +'}'\n",
-    "            CustomRulesCombined = '^('+ CustomRules1 + CustomRules2  +')$'\n",
-    "            found += findMatchedText(CustomRulesCombined,text_to_check)\n",
-    "\n",
-    "    return found\n",
-    "\n",
-    "%time countRepetitiveMessage()"
+    "%time countRepetitiveMessage2(monkeyMessages, parseRule(rules[\"31\"]), parseRule(rules[\"42\"]), 7)"
    ]
   },
   {
