--- a/Day 23/Day 23.ipynb
+++ b/Day 23/Day 23.ipynb
@@ -43,37 +43,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def move2(pz, count):\n",
-    "    cups = {}\n",
-    "    puzzle = list(map(int,list(pz))) if type(pz) is str else pz\n",
+    "def move2(inputvalue, count):\n",
+    "    cups, puzzle = {} , list(map(int,list(inputvalue))) if type(inputvalue) is str else inputvalue\n",
     "    \n",
     "    for i, val in enumerate(puzzle):\n",
     "        cups[val] = [val, puzzle[i+1] if i < len(puzzle) - 1 else puzzle[0]]\n",
     "        # 0 for original value, 1 for nextvalue         \n",
     "        \n",
-    "    pos = puzzle[0]\n",
+    "    current = cups[puzzle[0]]  \n",
     "    min_value, max_value = min(cups), max(cups)\n",
     "    \n",
-    "    for i in range(count):\n",
-    "        current = cups[pos]\n",
-    "        dest = current[0] - 1 if current[0] > min_value else max_value\n",
-    "\n",
+    "    for i in range(count):             \n",
     "        pick1 = cups[current[1]]\n",
     "        pick2 = cups[pick1[1]]\n",
     "        pick3 = cups[pick2[1]]\n",
-    "\n",
-    "        while dest in [pick1[0], pick2[0], pick3[0]]:\n",
+    "        dest = current[0] - 1 if current[0] > min_value else max_value\n",
+    "        \n",
+    "        while dest in (pick1[0], pick2[0], pick3[0]):\n",
     "            if dest == min_value: dest = max_value\n",
     "            else: dest -= 1   \n",
     "        \n",
-    "        current[1] = pick3[1]\n",
-    "        cups[pick2[1]][1] = cups[dest][1]\n",
-    "        cups[dest][1] = pick1[0]\n",
-    "        \n",
-    "        pos = current[1]\n",
+    "        current[1], cups[pick2[1]][1], cups[dest][1] = pick3[1], cups[dest][1], pick1[0]\n",
+    "        current = cups[current[1]]\n",
     "    \n",
-    "    hidden = cups[cups[1][1]]\n",
-    "    return (hidden[0] * hidden[0], hidden)"
+    "    hidden_stars = cups[cups[1][1]]\n",
+    "    return (hidden_stars[0] * hidden_stars[0], hidden_stars)"
    ]
   },
   {
@@ -92,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 0 ns\n"
+      "Wall time: 1.1 ms\n"
      ]
     },
     {
@@ -126,7 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 21.4 s\n"
+      "Wall time: 0 ns\n",
+      "Wall time: 20.4 s\n"
      ]
     },
     {
@@ -144,6 +139,13 @@
     "%time newpuzzle = lambda x: list(map(int,list(x))) + list(range(10, 1000001))\n",
     "%time move2(newpuzzle(\"685974213\"), 10000000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
